<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Krishi Sarathi</string>
    <string name="slide1_title" translatable="false">Slide 1</string>
    <string name="slide2_title" translatable="false">Slide 2</string>
    <string name="slide3_title" translatable="false">Slide 3</string>
    <string name="slide4_title" translatable="false">Slide 4</string>
    <string name="get_started">Get started</string>
    <string name="skip">SKIP</string>
    <string name="payment">Payments</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="my_orders">My Orders</string>
    <string name="history">History</string>
    <string name="track_order">Track Order</string>
    <string name="get_online_ordering_help">Get Online Ordering Help</string>
    <string name="my_locations_btn">My Locations</string>
    <string name="about_btn">About</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_desc" translatable="false">Edit your profile photo, name, contact and location</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password_desc" translatable="false">Change current password</string>
    <string name="change_language">Change Language</string>
    <string name="change_langauge_desc" translatable="false">Change app language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="notification_settings_desc" translatable="false">Change app notifications</string>
    <string name="delete_account_desc" translatable="false">Delete your account</string>
    <string name="logout_desc" translatable="false">Logout from the current device</string>
    <string name="select_language">Please select your language</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="profile">Profile</string>
    <string name="equipment">Equipment</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="create_account">Create New Account</string>
    <string name="already_account">Already Have Account</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="pass">Password</string>
    <string name="confm_pass">Confirm Password</string>
    <string name="username">Username</string>
    <string name="enter_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="enter_your_country_code_and_phone">Enter Your Country Code And Phone Number to Signup or Login</string>
    <string name="create_massage">Create Or Login Account</string>
    <string name="Login_massage">Login Account</string>
    <string name="enter_mobile_number">Enter mobile Number</string>
    <string name="enter_the_otp_sent_to">Enter OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive_the_otp">Didn\'t Receive the OTP?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="provide_your_email_account" translatable="false">Provide your Email account for associated\n with your account</string>
    <string name="your_password_has_been_updated">Your password has been updated</string>
    <string name="password_nupdated">Password\nUpdated</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Mobile No.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete_photo">Delete</string>
    <string name="account">Account</string>
    <string name="current_pass">Current Password</string>
    <string name="forgot_current_pass">Forgot Current Password?</string>
    <string name="select_to_proceed">Please select a language to proceed!</string>
    <string name="navigation_draw_open" translatable="false">open navigation drawer</string>
    <string name="navigation_draw_close" translatable="false">close navigation drawer</string>
    <string name="government_scheme" translatable="false">Government scheme</string>
    <string name="farmer_guide" translatable="false">Farmer guide</string>
    <string name="orders" translatable="false">Orders</string>
    <string name="help" translatable="false">Help</string>
    <string name="about_us" translatable="false">About us</string>
    <string name="rate_us" translatable="false">Rate us</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="Home" translatable="false">Home</string>
    <string name="Profile" translatable="false">Profile</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="share" translatable="false">Share</string>
    <string name="krishisarathi_com" translatable="false">krishisarathi.com</string>
    <string name="krishi_sarathi" translatable="false">Krishi Sarathi</string>
    <string name="krishisarathigmail.con" translatable="false">krishisarathi@gmail.com</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="krishisarathi_gmail_con" translatable="false">krishisarathi@gmail.con</string>
    <string name="government_scheme_fragment" translatable="false">Government scheme fragment</string>
    <string name="about_us_fragment" translatable="false">About us Fragment</string>
    <string name="farmer_guide_fragment" translatable="false">Farmer guide fragment</string>
    <string name="feedback_fragment" translatable="false">Feedback Fragment</string>
    <string name="YourOrders" translatable="false">Your Orders</string>
    <string name="help_fragment" translatable="false">Help Fragment</string>
    <string name="location_fragment" translatable="false">Location Fragment</string>
    <string name="orders_fragment" translatable="false">Orders Fragment</string>
    <string name="rate_us_fragment" translatable="false">Rate us Fragment</string>
    <string name="share_fragment" translatable="false">Share Fragment</string>
    <string name="Home_fragment" translatable="false">Home Fragment</string>
    <string name="profile_fragment" translatable="false">profile Fragment </string>
    <string name="krishisarathi_gmail_com" translatable="false" />
    <string name="Location" translatable="false" />
    <string name="equipment_owner" translatable="false">Equipment owner</string>
    <string name="equipment_ownerfragment" translatable="false" />
    <string name="equipment_owner_fragment" translatable="false">Equipment owner fragment</string>
    <string name="krishisarathigmail_com" translatable="false">krishisarathigmail.com</string>
    <string name="krishi_sarthi" translatable="false">Krishi sarthi</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="farmer" translatable="false">Farmer</string>
    <string name="add_location" translatable="false">Add Location</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="updates" translatable="false">Updates</string>
    <string name="add_equipment" translatable="false">Add Equipment</string>
    <string name="choose_the_equipment_that_you_rent" translatable="false">Choose the equipment that you rent</string>
    <string name="machine_company_name" translatable="false">Machine Company Name</string>
    <string name="which_year_of_model" translatable="false">Which year of model:</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="do_you_have_tractor" translatable="false">Do you have tractor?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="how_many" translatable="false">How many?</string>
    <string name="do_you_have_equipment" translatable="false">Do you have Equipment?</string>
    <string name="registration" translatable="false">Registration</string>
    <string name="hi_do_you_want_to_be_a_partner_in_krishi_sarathi_if_yes_registration_process_as_below" translatable="false">Hi, do you want to be a partner in Krishi Sarathi? If yes, registration process as below</string>
    <string name="my_equipment">My Equipment</string>
    <string name="owner_details" translatable="false">Owner Details :</string>
    <string name="owner_id" translatable="false">Owner ID :</string>
    <string name="equi_details" translatable="false">Equipment Details :</string>
    <string name="company" translatable="false">Company :</string>
    <string name="equipment_colon" translatable="false">Equipment :</string>
    <string name="model_year_colon" translatable="false">Model Year :</string>
    <string name="fill_user_details" translatable="false">Fill User Details :</string>
    <string name="address" translatable="false">Address</string>
    <string name="city" translatable="false">City</string>
    <string name="city_code" translatable="false">City Code</string>
    <string name="payment1" translatable="false">Payment</string>
    <string name="done" translatable="false">Done</string>
    <string name="cultivator" translatable="false">Cultivator</string>
    <string name="hi" translatable="false">Hi,</string>
    <string name="user" translatable="false">User</string>
    <string name="register" translatable="false">Register</string>
    <string name="rent_price" translatable="false">Rent Price :</string>
    <string name="shipping_charges" translatable="false">Shipping Charges :</string>
    <string name="total_price" translatable="false">Total Price :</string>
    <string name="payment_methods" translatable="false">Payment Methods :</string>
    <string name="cash_on_delivery" translatable="false">Cash On Delivery</string>
    <string name="upi" translatable="false">UPI</string>
    <string name="debit_credit" translatable="false">Debit/Credit Card</string>
    <string name="book_equi" translatable="false">Book Equipment</string>
    <string name="resend_otp" translatable="false">RESEND OTP</string>
    <string name="renting_price" translatable="false">Renting Price :</string>
    <string name="desc" translatable="false">Description</string>
    <string name="equi_name_and_more" translatable="false">Equipment Name and more</string>
    <string name="search_elements" translatable="false">Search elements</string>
    <string name="min" translatable="false">Min</string>
    <string name="max" translatable="false">Max</string>
    <string name="humidity" translatable="false">humidity</string>
    <string name="wind" translatable="false">wind</string>
    <string name="reload" translatable="false">Reload</string>
    <string name="income" translatable="false">Income</string>
    <string name="request" translatable="false">Request</string>
    <string name="move_to_user" translatable="false">Move to User Activity</string>
    <string name="move_to_owner" translatable="false">Move to Owner Activity</string>
    <string name="model_year" translatable="false">Model Year :</string>
    <string name="sorry_we_don_t_have_a_information" translatable="false">Sorry We Don\'t have a Information</string>
    <string name="result_available" translatable="false">Result Available</string>
    <string name="per_one_acre" translatable="false">Per One Acre</string>
    <string name="_4_4" translatable="false">4.4</string>
</resources>